--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -6,15 +6,15 @@ monitor = , preferred, auto, auto
 # PROGRAMS =====================================================================
 $terminal = kitty -1
 $fileManager = $terminal -e yazi
-$menu = walker -m applications
+$menu = rofi -show drun -show-icons
 
 # AUTOSTART ====================================================================
 exec-once = hyprpaper
 exec-once = waybar
 exec-once = hypridle
 exec-once = wl-clip-persist --clipboard regular
-exec-once = walker --gapplication-service  # Has memory leaks at the moment
-exec-once = systemctl --user start hyprpolkitagent
+exec-once = wl-paste --watch cliphist store
+exec-once = systemctl --user start hyprpolkitagent.service
 
 # LOOK AND FEEL ================================================================
 # wiki: https://wiki.hyprland.org/Configuring/Variables/#general
@@ -24,8 +24,8 @@ general {
 
     border_size = 2
 
-    col.active_border = rgb(27a1b9)
-    col.inactive_border = rgb(292e42)
+    col.active_border = rgb(ff9e64)
+    col.inactive_border = rgb(27a1b9)
 
     layout = master
 }
@@ -76,9 +76,9 @@ animations {
 
 # wiki: https://wiki.hyprland.org/Configuring/Master-Layout
 master {
-    mfact = 0.5
     new_on_top = true
     new_status = master
+    mfact = 0.5
 }
 
 # wiki: https://wiki.hyprland.org/Configuring/Variables/#misc
@@ -93,6 +93,17 @@ misc {
 # wiki: https://wiki.hyprland.org/Configuring/Variables/#xwayland
 xwayland {
     force_zero_scaling = true
+}
+
+# wiki: https://wiki.hyprland.org/Configuring/Variables/#cursor
+cursor {
+    enable_hyprcursor = false
+}
+
+# wiki: https://wiki.hyprland.org/Configuring/Variables/#ecosystem
+ecosystem {
+    no_update_news = true
+    no_donation_nag = true
 }
 
 # INPUT ========================================================================
@@ -130,12 +141,15 @@ binds {
     scroll_event_delay = 100
 }
 
-ecosystem {
-    no_donation_nag = true
-    no_update_news = true
-}
-
 # KEYBINDINGS: https://wiki.hyprland.org/Configuring/Binds =====================
+# Notifications
+bind = SUPER, N, submap, notificaciones
+submap = notificaciones
+bind = , escape, submap, reset
+bind = , O, exec, dunstctl context && hyprctl dispatch submap reset
+bind = , C, exec, dunstctl close-all && hyprctl dispatch submap reset
+submap = reset
+
 # General binds
 bind = SUPER, Q, exec, $terminal
 bind = SUPER, C, killactive,
@@ -144,11 +158,12 @@ bind = SUPER, E, exec, $fileManager
 bind = SUPER, Space, togglefloating,
 bind = SUPER, R, exec, $menu
 bind = SUPER, F, fullscreen, 0
-bind = SUPER, period, exec, walker -m emojis
-bind = SUPER, V, exec, walker -m clipboard
-bind = SUPER, P, exec, walker -m custom_commands -k
-bind = , Print, exec, grim - | wl-copy
-bind = SHIFT, Print, exec, grim -g "$(slurp -b 00000077 -w 0 || echo)" - | wl-copy
+bind = SUPER, period, exec, rofimoji -r Emojis
+bind = SUPER, V, exec, cliphist list | rofi -dmenu -d -p Portapapeles | cliphist decode | wl-copy
+bind = SUPER, B, exec, $terminal --class floatterm -e bluetui
+bind = SUPER, P, exec, ~/.config/hypr/scripts/command_palette.sh
+bind = , Print, exec, ~/.config/hypr/scripts/screenshot.sh fullscreen
+bind = SHIFT, Print, exec, ~/.config/hypr/scripts/screenshot.sh select
 
 # Master-Layout
 bind = SUPER, j, layoutmsg, cyclenext
@@ -226,6 +241,9 @@ windowrulev2 = rounding 0, floating:0, onworkspace:w[tv1]
 windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
 windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
 
-layerrule = animation slide left, rofi
-layerrule = animation popin 95%, walker
-layerrule = animation popin 95%, launcher
+# Terminal floating window
+windowrulev2 = float, class:(floatterm)
+windowrulev2 = size 1000 600, class:(floatterm)
+
+# Rofi animation
+layerrule = animation popin 98%, rofi
