--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,5 +1,5 @@
 # Shell
-set -g default-shell ~/.local/bin/fish
+set -g default-shell /usr/bin/fish
 
 # Reload
 bind r 'source-file ~/.config/tmux/tmux.conf; display-message "Config reloaded!"'
