--- a/config/hypr/hypridle.conf
+++ b/config/hypr/hypridle.conf
@@ -1,6 +1,6 @@
 general {
     lock_cmd = pidof hyprlock || hyprlock
-    before_sleep_cmd = loginctl lock-session && sleep 1
+    before_sleep_cmd = loginctl lock-session
 }
 
 listener {
