--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # Shell
-shell /home/warbacon/.local/bin/fish
+shell fish
 
 # General
 mouse_hide_wait -1
@@ -7,11 +7,11 @@ strip_trailing_spaces always
 notify_on_cmd_finish invisible 10.0
 
 # Font
-font_family JetBrains Mono
+font_family CommitMono
 font_size 14
-modify_font cell_height 14px
-modify_font strikethrough_position 8px
-disable_ligatures cursor
+modify_font cell_height 12px
+modify_font strikethrough_position 6px
+disable_ligatures always
 undercurl_style thick-sparse
 
 # Performance
@@ -19,7 +19,9 @@ wayland_enable_ime no
 
 # Tabs
 tab_bar_edge        top
-tab_bar_style       powerline
+tab_bar_align       center
+tab_bar_style       fade
+tab_fade            1
 tab_title_template  "{index}:{title}"
 
 remember_window_size  no
