--- a/config/fontconfig/fonts.conf
+++ b/config/fontconfig/fonts.conf
@@ -4,7 +4,7 @@
   <alias>
     <family>sans-serif</family>
     <prefer>
-      <family>Inter</family>
+      <family>Adwaita Sans</family>
     </prefer>
   </alias>
 
@@ -13,13 +13,13 @@
       <string>monospace</string>
     </test>
     <edit name="family" mode="prepend" binding="strong">
-      <string>CommitMono</string>
+      <string>IBM Plex Mono</string>
     </edit>
   </match>
 
   <match target="pattern">
     <test name="family" compare="eq">
-      <string>CommitMono</string>
+      <string>IBM Plex Mono</string>
     </test>
     <edit name="family" mode="append" binding="strong">
       <string>Symbols Nerd Font</string>
