--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -14,7 +14,6 @@ exec-once = waybar
 exec-once = hypridle
 exec-once = wl-clip-persist --clipboard regular
 exec-once = wl-paste --watch cliphist store
-exec-once = systemctl --user start hyprpolkitagent.service
 
 # LOOK AND FEEL ================================================================
 # wiki: https://wiki.hyprland.org/Configuring/Variables/#general
@@ -160,7 +159,7 @@ bind = SUPER, R, exec, $menu
 bind = SUPER, F, fullscreen, 0
 bind = SUPER, period, exec, rofimoji -r Emojis
 bind = SUPER, V, exec, cliphist list | rofi -dmenu -d -p Portapapeles | cliphist decode | wl-copy
-bind = SUPER, B, exec, $terminal --class floatterm -e bluetui
+bind = SUPER, B, exec, killall -s1 bluetui || $terminal --class floatterm -e bluetui
 bind = SUPER, P, exec, ~/.config/hypr/scripts/command_palette.sh
 bind = , Print, exec, ~/.config/hypr/scripts/screenshot.sh fullscreen
 bind = SHIFT, Print, exec, ~/.config/hypr/scripts/screenshot.sh select
@@ -220,30 +219,30 @@ bindm = SUPER, mouse:273, resizewindow
 # wiki: https://wiki.hyprland.org/Configuring/Workspace-Rules
 
 # Ignore maximize requests from apps.
-windowrulev2 = suppressevent maximize, class:.*
+windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
-windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
 # Firefox Picture-in-Picture
-windowrulev2 = float, initialTitle:Picture-in-Picture, initialClass:firefox
-windowrulev2 = pin, initialTitle:Picture-in-Picture, initialClass:firefox
-windowrulev2 = keepaspectratio, initialTitle:Picture-in-Picture, initialClass:firefox
-windowrulev2 = suppressevent activate, initialTitle:Picture-in-Picture, initialClass:firefox
-windowrulev2 = suppressevent fullscreen, initialTitle:Picture-in-Picture, initialClass:firefox
-windowrulev2 = size 512 288, initialTitle:Picture-in-Picture, initialClass:firefox
+windowrule = float, initialTitle:Picture-in-Picture, initialClass:firefox
+windowrule = pin, initialTitle:Picture-in-Picture, initialClass:firefox
+windowrule = keepaspectratio, initialTitle:Picture-in-Picture, initialClass:firefox
+windowrule = suppressevent activate, initialTitle:Picture-in-Picture, initialClass:firefox
+windowrule = suppressevent fullscreen, initialTitle:Picture-in-Picture, initialClass:firefox
+windowrule = size 512 288, initialTitle:Picture-in-Picture, initialClass:firefox
 
 # Smart gaps
 workspace = w[tv1], gapsout:0, gapsin:0
 workspace = f[1], gapsout:0, gapsin:0
-windowrulev2 = bordersize 0, floating:0, onworkspace:w[tv1]
-windowrulev2 = rounding 0, floating:0, onworkspace:w[tv1]
-windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
-windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
+windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
+windowrule = rounding 0, floating:0, onworkspace:w[tv1]
+windowrule = bordersize 0, floating:0, onworkspace:f[1]
+windowrule = rounding 0, floating:0, onworkspace:f[1]
 
 # Terminal floating window
-windowrulev2 = float, class:(floatterm)
-windowrulev2 = size 1000 600, class:(floatterm)
+windowrule = float, class:(floatterm)
+windowrule = size 1000 600, class:(floatterm)
 
 # Rofi animation
 layerrule = animation popin 98%, rofi
