--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -12,7 +12,7 @@ label {
     text = cmd[update:0:1] echo $(date +"%A, %d de %B")
     color = rgba(255,255,255,0.5)
     font_size = 40
-    font_family = Inter Medium
+    font_family = Adwaita Sans Medium
 
     position = 0, -250
     halign = center
@@ -23,7 +23,7 @@ label {
     text = $TIME
     color = rgba(255,255,255,0.5)
     font_size = 175
-    font_family = Inter Bold
+    font_family = Adwaita Sans Bold
 
     position = 0, -300
     halign = center
