--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -5,13 +5,15 @@ shell fish
 mouse_hide_wait -1
 strip_trailing_spaces always
 notify_on_cmd_finish invisible 10.0
+placement_strategy top-left
+# cursor_trail 3
 
 # Font
-font_family CommitMono
+font_family monospace
 font_size 14
-modify_font cell_height 12px
-modify_font strikethrough_position 6px
-disable_ligatures always
+modify_font cell_height 8px
+modify_font strikethrough_position 4px
+disable_ligatures cursor
 undercurl_style thick-sparse
 
 # Performance
