feat: things xDDDD

--- a/warbacon/.config/waybar/config.jsonc
+++ b/warbacon/.config/waybar/config.jsonc
@@ -108,5 +108,15 @@
       "on-scroll-up": "shift_up",
       "on-scroll-down": "shift_down"
     }
+  },
+  "power-profiles-daemon": {
+    "format": "{icon}",
+    "tooltip-format": "Perfil de energía: {profile}",
+    "format-icons": {
+      "default": "",
+      "performance": "",
+      "balanced": "",
+      "power-saver": ""
+    }
   }
 }
