--- a/warbacon/.config/fontconfig/fonts.conf
+++ b/warbacon/.config/fontconfig/fonts.conf
@@ -2,10 +2,46 @@
 <!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
 <fontconfig>
   <alias>
+    <family>serif</family>
+    <prefer>
+      <family>FreeSerif</family>
+    </prefer>
+  </alias>
+  <alias>
+    <family>sans-serif</family>
+    <prefer>
+      <family>Inter</family>
+    </prefer>
+  </alias>
+  <alias>
     <family>monospace</family>
     <prefer>
       <family>Google Sans Code</family>
       <family>Symbols Nerd Font</family>
     </prefer>
   </alias>
+  <match target="pattern">
+    <test qual="any" name="family">
+      <string>Segoe UI</string>
+    </test>
+    <edit name="family" mode="prepend" binding="strong">
+      <string>Inter</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test qual="any" name="family">
+      <string>Verdana</string>
+    </test>
+    <edit name="family" mode="prepend" binding="strong">
+      <string>Inter</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test qual="any" name="family">
+      <string>Arial</string>
+    </test>
+    <edit name="family" mode="prepend" binding="strong">
+      <string>Inter</string>
+    </edit>
+  </match>
 </fontconfig>
