fonts: compatibility adjustments

--- a/warbacon/.config/fontconfig/fonts.conf
+++ b/warbacon/.config/fontconfig/fonts.conf
@@ -4,13 +4,16 @@
   <alias>
     <family>serif</family>
     <prefer>
-      <family>FreeSerif</family>
+      <family>Liberation Serif</family>
+      <family>Noto Color Emoji</family>
     </prefer>
   </alias>
   <alias>
     <family>sans-serif</family>
     <prefer>
       <family>Inter</family>
+      <family>Noto Color Emoji</family>
+      <family>Source Han Sans JP</family>
     </prefer>
   </alias>
   <alias>
@@ -18,30 +21,32 @@
     <prefer>
       <family>Google Sans Code</family>
       <family>Symbols Nerd Font</family>
+      <family>Noto Color Emoji</family>
     </prefer>
   </alias>
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>Segoe UI</string>
-    </test>
-    <edit name="family" mode="prepend" binding="strong">
-      <string>Inter</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>Verdana</string>
-    </test>
-    <edit name="family" mode="prepend" binding="strong">
-      <string>Inter</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>Arial</string>
-    </test>
-    <edit name="family" mode="prepend" binding="strong">
-      <string>Inter</string>
-    </edit>
-  </match>
+
+  <alias binding="same">
+    <family>Segoe UI</family>
+    <accept>
+      <family>Inter</family>
+    </accept>
+  </alias>
+  <alias binding="same">
+    <family>Arial</family>
+    <accept>
+      <family>Liberation Sans</family>
+    </accept>
+  </alias>
+  <alias binding="same">
+    <family>Verdana</family>
+    <accept>
+      <family>DejaVu Sans</family>
+    </accept>
+  </alias>
+  <alias binding="same">
+    <family>Courier New</family>
+    <accept>
+      <family>Liberation Mono</family>
+    </accept>
+  </alias>
 </fontconfig>
