systemd: add undug service and update the swww one

--- a/warbacon/.config/systemd/user/undug.service
+++ b/warbacon/.config/systemd/user/undug.service
@@ -1,11 +1,11 @@
 [Unit]
-Description=swww-daemon service
+Description=undug service
 PartOf=graphical-session.target
 After=graphical-session.target
 Requisite=graphical-session.target
 
 [Service]
-ExecStart=/usr/bin/swww-daemon
+ExecStart=/home/warbacon/.local/bin/undug
 ExecReload=kill -HUP $MAINPID
 Restart=on-failure
 
