--- a/warbacon/.config/git/config
+++ b/warbacon/.config/git/config
@@ -3,3 +3,9 @@
 	name = Joaquín Guerra
 [init]
 	defaultBranch = main
+[credential "https://github.com"]
+	helper =
+	helper = !/usr/bin/gh auth git-credential
+[credential "https://gist.github.com"]
+	helper =
+	helper = !/usr/bin/gh auth git-credential
